# DTK-demo

./: .gitignore
DArrowRectangle/: main.cpp
DBackgroundGroup/: main.cpp
DButtonBox/: CMakeLists.txt  DButtonBoxButton.md  main.cpp
DListView/: CMakeLists.txt  main.cpp
DMainWindow/: CMakeLists.txt  DMainWindow.md  main.cpp
DSettingsDialog/: CMakeLists.txt  main.cpp  resources.qrc
DSettingsDialog/settingsData/: settings.json  settings2.json
DSlider/: main.cpp
DStyle/: CMakeLists.txt  main.cpp
DStyle2/: main.cpp
DTitlebar/: CMakeLists.txt  main.cpp
DTitlebar/docs/: CMakeLists.txt  main_zh_CN.dox
ddialog/: CMakeLists.txt  main.cpp
